cabal-version:      3.0
name:               maestro-sdk
version:            1.0.0
synopsis:           Maestro Blockchain Indexer SDK
description:        Maestro provides blockchain indexers, APIs and event management systems for the Cardano blockchain.
license:            Apache-2.0
license-file:       LICENSE
author:             support@gomaestro.org
maintainer:         support@gomaestro.org
copyright:          (c) 2023 Maestro Blockchain Inc
build-type:         Simple
category:           Blockchain, Cardano, SDK, API, REST
extra-doc-files:    CHANGELOG.md
extra-source-files: README.md
tested-with:        GHC == 8.10.7, GHC == 9.2.8

source-repository head
  type:     git
  location: https://github.com/maestro-org/haskell-sdk

common common 
    ghc-options: -Wall
    default-extensions:
      GADTs
      DataKinds
      DeriveGeneric
      DerivingStrategies
      DerivingVia
      GeneralisedNewtypeDeriving
      FlexibleInstances
      FlexibleContexts
      MultiParamTypeClasses
      NumericUnderscores
      OverloadedStrings
      RecordWildCards
      RoleAnnotations
      ScopedTypeVariables
      TemplateHaskell
      TypeApplications
      TypeFamilies
      TypeOperators
      QuasiQuotes

library
    import:           common
    exposed-modules:  
      Maestro.API.V0
      Maestro.API.V0.Accounts
      Maestro.API.V0.Address
      Maestro.API.V0.Assets
      Maestro.API.V0.Datum
      Maestro.API.V0.Epochs
      Maestro.API.V0.General
      Maestro.API.V0.Pool
      Maestro.API.V0.Scripts
      Maestro.API.V0.Transaction
      Maestro.API.V0.TxManager

      Maestro.API.V1
      Maestro.API.V1.Addresses
      Maestro.API.V1.Datum
      Maestro.API.V1.General
      Maestro.API.V1.Pools
      Maestro.API.V1.Transactions
      Maestro.API.V1.TxManager

      Maestro.Client.Env
      Maestro.Client.Error
      Maestro.Client.V0
      Maestro.Client.V0.Core
      Maestro.Client.V0.Core.Pagination
      Maestro.Client.V0.Datum
      Maestro.Client.V0.Epochs
      Maestro.Client.V0.Accounts
      Maestro.Client.V0.Address
      Maestro.Client.V0.Assets
      Maestro.Client.V0.General
      Maestro.Client.V0.Pools
      Maestro.Client.V0.Scripts
      Maestro.Client.V0.Transaction
      Maestro.Client.V0.TxManager

      Maestro.Client.V1
      Maestro.Client.V1.Core
      Maestro.Client.V1.Core.Pagination
      Maestro.Client.V1.Addresses
      Maestro.Client.V1.Datum
      Maestro.Client.V1.General
      Maestro.Client.V1.Pools
      Maestro.Client.V1.Transactions
      Maestro.Client.V1.TxManager

      Maestro.Types.Common
      Maestro.Types.V0
      Maestro.Types.V0.Accounts
      Maestro.Types.V0.Address
      Maestro.Types.V0.Assets
      Maestro.Types.V0.Common
      Maestro.Types.V0.Datum
      Maestro.Types.V0.Epochs
      Maestro.Types.V0.General
      Maestro.Types.V0.Pool
      Maestro.Types.V0.Transactions

      Maestro.Types.V1
      Maestro.Types.V1.Addresses
      Maestro.Types.V1.Datum
      Maestro.Types.V1.Common
      Maestro.Types.V1.Common.Pagination
      Maestro.Types.V1.Common.Timestamped
      Maestro.Types.V1.General
      Maestro.Types.V1.Pools
      Maestro.Types.V1.Transactions

    -- other-modules:
    -- other-extensions:
    build-depends:    
      , base                >= 4.14.3.0  &&  < 4.19
      , bytestring
      , aeson
      , containers
      , deriving-aeson
      , servant
      , servant-client
      , servant-client-core
      , text
      , time
      , http-client
      , http-client-tls
      , http-types
      , http-api-data
      , data-default-class

    hs-source-dirs:   src
    default-language: Haskell2010

test-suite maestro-sdk-tests
    import:           common
    default-language: Haskell2010
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Driver.hs
    other-modules:
        Maestro.Test.Datum
        Maestro.Test.Epochs
        Maestro.Test.General
        Maestro.Test.Pool
        Maestro.Test.Transaction

    build-depends:
        base
      , maestro-sdk
      , aeson
      , bytestring
      , containers
      , raw-strings-qq
      , hspec
      , tasty
      , tasty-hspec
      , time
    build-tool-depends:
        tasty-discover:tasty-discover

executable maestro-exe
    import:           common
    default-language: Haskell2010
    other-modules:
      Maestro.Run.Datum
      Maestro.Run.General
      Maestro.Run.Pools
      Maestro.Run.Scripts
      Maestro.Run.Tx
      Maestro.Run.Epochs
      Maestro.Run.Address
    -- other-extensions:
    hs-source-dirs:   maestro-exe
    main-is:          Main.hs
    build-depends:
        base,
        maestro-sdk,
        text
