cabal-version:      3.0
name:               maestro-sdk
version:            1.1.0
synopsis:           Maestro Blockchain Indexer SDK
description:        Maestro provides blockchain indexers, APIs and event management systems for the Cardano blockchain.
license:            Apache-2.0
license-file:       LICENSE
author:             support@gomaestro.org
maintainer:         support@gomaestro.org
copyright:          (c) 2023 Maestro Blockchain Inc
build-type:         Simple
category:           Blockchain, Cardano, SDK, API, REST
extra-doc-files:    CHANGELOG.md
extra-source-files: README.md
tested-with:        GHC == { 8.10.7, 9.2.8, 9.6.2 }

source-repository head
  type:     git
  location: https://github.com/maestro-org/haskell-sdk

common common
    ghc-options: -Wall
    default-extensions:
      GADTs
      DataKinds
      DeriveGeneric
      DerivingStrategies
      DerivingVia
      GeneralisedNewtypeDeriving
      FlexibleInstances
      FlexibleContexts
      MultiParamTypeClasses
      NumericUnderscores
      OverloadedStrings
      RecordWildCards
      RoleAnnotations
      ScopedTypeVariables
      TemplateHaskell
      TypeApplications
      TypeFamilies
      TypeOperators
      QuasiQuotes

library
    import:           common
    exposed-modules:
      Maestro.API.V1
      Maestro.API.V1.Accounts
      Maestro.API.V1.Addresses
      Maestro.API.V1.Blocks
      Maestro.API.V1.Datum
      Maestro.API.V1.General
      Maestro.API.V1.Pools
      Maestro.API.V1.Transactions
      Maestro.API.V1.TxManager

      Maestro.Client.Env
      Maestro.Client.Error

      Maestro.Client.V1
      Maestro.Client.V1.Core
      Maestro.Client.V1.Core.Pagination
      Maestro.Client.V1.Accounts
      Maestro.Client.V1.Addresses
      Maestro.Client.V1.Blocks
      Maestro.Client.V1.Datum
      Maestro.Client.V1.General
      Maestro.Client.V1.Pools
      Maestro.Client.V1.Transactions
      Maestro.Client.V1.TxManager

      Maestro.Types.Common

      Maestro.Types.V1
      Maestro.Types.V1.Accounts
      Maestro.Types.V1.Addresses
      Maestro.Types.V1.Blocks
      Maestro.Types.V1.Datum
      Maestro.Types.V1.Common
      Maestro.Types.V1.Common.Pagination
      Maestro.Types.V1.Common.Timestamped
      Maestro.Types.V1.General
      Maestro.Types.V1.Pools
      Maestro.Types.V1.Transactions

    build-depends:
      aeson ^>=2.1.2.1,
      base ^>=4.14.3.0 || ^>=4.16.4.0 || ^>=4.18.0.0,
      bytestring ^>=0.10.12.0 || ^>=0.11.4.0,
      containers ^>=0.6.5.1,
      data-default-class ^>=0.1.2.0,
      deriving-aeson ^>=0.2.9,
      http-api-data ^>=0.5,
      http-client ^>=0.7.14,
      http-client-tls ^>=0.3.6.3,
      http-types ^>=0.12.3,
      retry ^>=0.9.3.1,
      servant ^>=0.20,
      servant-client ^>=0.20,
      servant-client-core ^>=0.20,
      text ^>=1.2.4.1 || ^>=2.0.2,
      time ^>=1.9.3 || ^>=1.11.1.1 || ^>=1.12.2

    hs-source-dirs:   src
    default-language: Haskell2010

test-suite maestro-sdk-tests
    import:           common
    default-language: Haskell2010
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Driver.hs
    other-modules:
        Maestro.Test.Backoff

    build-depends:
        base ^>=4.14.3.0 || ^>=4.16.4.0 || ^>=4.18.0.0,
        maestro-sdk,
        containers ^>=0.6.5.1,
        hspec ^>=2.11.4,
        tasty ^>=1.4.3,
        tasty-hspec ^>=1.2.0.4,
        text ^>=1.2.4.1 || ^>=2.0.2,
        time ^>=1.9.3 || ^>=1.11.1.1 || ^>=1.12.2
    build-tool-depends:
        tasty-discover:tasty-discover
