cabal-version:      3.0
name:               maestro-sdk
version:            0.1.0.0
-- synopsis:
-- description:
license:            MIT
license-file:       LICENSE
author:             Piyush thapa
maintainer:         piyush.codelabs@gmail.com
-- copyright:
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common common 
    ghc-options: -Wall
    default-extensions:
      DataKinds
      DeriveGeneric
      DerivingStrategies
      DerivingVia
      GeneralisedNewtypeDeriving
      MultiParamTypeClasses
      NumericUnderscores
      OverloadedStrings
      RecordWildCards
      RoleAnnotations
      ScopedTypeVariables
      TemplateHaskell
      TypeOperators
      QuasiQuotes

library
    import:           common
    exposed-modules:  
      Maestro.API
      Maestro.API.Accounts
      Maestro.API.Address
      Maestro.API.Assets
      Maestro.API.General
      Maestro.API.Pool
      Maestro.API.Transaction

      Maestro.Client
      Maestro.Client.Env
      Maestro.Client.Accounts
      Maestro.Client.Address
      Maestro.Client.Assets
      Maestro.Client.General
      Maestro.Client.Pools
      Maestro.Client.Transaction

      Maestro.Types
      Maestro.Types.Accounts
      Maestro.Types.Address
      Maestro.Types.Assets
      Maestro.Types.Common
      Maestro.Types.Epoch
      Maestro.Types.General
      Maestro.Types.Pool

      Maestro.Util.Pagination

    -- other-modules:
    -- other-extensions:
    build-depends:    
      , base ^>=4.14.3.0
      , bytestring
      , aeson
      , containers
      , deriving-aeson
      , servant
      , servant-client
      , servant-client-core
      , text
      , time
      , http-client
      , http-client-tls

    hs-source-dirs:   src
    default-language: Haskell2010

test-suite maestro-api-test
    import:           common
    default-language: Haskell2010
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Driver.hs
    other-modules:
        Maestro.Test.General
        Maestro.Test.Pool
        Maestro.Test.Transaction
    build-depends:
        base ^>=4.14.3.0
      , maestro-sdk
      , aeson
      , bytestring
      , containers
      , raw-strings-qq
      , hspec
      , tasty
      , tasty-hspec
      , time
    build-tool-depends:
        tasty-discover:tasty-discover



executable maestro-exe
    import:           common
    default-language: Haskell2010
    other-modules:
      Maestro.Run.Pools
      Maestro.Run.Tx
    -- other-extensions:
    type:             exitcode-stdio-1.0
    hs-source-dirs:   maestro-exe
    main-is:          Main.hs
    build-depends:
        base ^>=4.14.3.0,
        maestro-sdk,
        text
