cabal-version:      3.0
name:               maestro-client
version:            0.1.0.0
-- synopsis:
-- description:
license:            MIT
license-file:       LICENSE
author:             Piyush thapa
maintainer:         piyush.codelabs@gmail.com
-- copyright:
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common common
    ghc-options: -Wall
    default-extensions:
      DataKinds
      DeriveGeneric
      DerivingStrategies
      DerivingVia
      OverloadedStrings
      RecordWildCards
      TypeOperators

library
    import:           common
    exposed-modules:  
      Maestro.Client
      Maestro.Client.Env
      Maestro.Client.Accounts
      Maestro.Client.Address
      Maestro.Client.Assets
      Maestro.Client.General
      Maestro.Client.Pools
      Maestro.Client.Transaction

    -- other-modules:
    -- other-extensions:
    build-depends:    
      , base ^>=4.14.3.0
      , bytestring
      , deriving-aeson
      , servant
      , servant-client
      , servant-client-core
      , text
      , http-client
      , http-client-tls
      , maestro-api

    hs-source-dirs:   src
    default-language: Haskell2010

test-suite maestro-test
    import:           common
    default-language: Haskell2010
    -- other-modules:
    -- other-extensions:
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs
    build-depends:
        base ^>=4.14.3.0,
        maestro-client
